syntax = "proto3";

service SubscriptionManager {
  rpc GetSubscriptionStatus (GetSubscriptionStatusInput) returns (GetSubscriptionStatusOutput);
}

message GetSubscriptionStatusInput {
  string subscriptionKey = 1;
}

message GetSubscriptionStatusOutput {
  bool active = 1;
  uint32 expiryTimestamp = 2;
}
